Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122723

MySql and ODBC QSqlField.defaultValue() always get invalid QVariant

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.8.0 FF
    • 5.15.7, 6.6.2
    • SQL Support
    • None
    • All
    • e2e818483 (dev), 920dfb2f4 (dev), 0ff64a5b9 (6.8)

    Description

      Always get an invalid QVariant when using QSqlField.defaultValue() from ODBC and MySql database.

      Setting QSqlField.setDefaultValue(someValue) doesn't work and the default value doesn't change.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            embabi Mohamed Suliman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes